--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "description": "Sistema completo de gestão para times de futebol com funcionalidades para administradores e jogadores.",
   "start_url": "/",
   "display": "fullscreen",
-  "display_override": ["fullscreen", "window-controls-overlay", "standalone"],
+  "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "background_color": "#F8FAFC",
   "theme_color": "#1E293B",
   "orientation": "portrait-primary",
@@ -15,7 +15,20 @@
     {
       "src": "icone.svg",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "shortcuts": [
