Complete offline support and fix all PWA warnings

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -137,6 +137,21 @@
       "origin": "https://dvfoot.netlify.app"
     }
   ],
-  "screenshots": [],
+  "screenshots": [
+    {
+      "src": "screenshot-desktop.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Dashboard do Time Manager"
+    },
+    {
+      "src": "screenshot-mobile.png",
+      "sizes": "375x667",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Time Manager Mobile"
+    }
+  ],
   "prefer_related_applications": false
 }
